log_stash/Andromeda-annulus-calc-10599325-error.log
  File "M31_signal_vs_entire_sky.py", line 659
    if args.--show_dispersion: #show patches on spehre as they get smaller
            ^
SyntaxError: invalid syntax
